fix bug overflow x

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -8,6 +8,11 @@
   * {
     @apply tracking-wide
   }
+
+  html,body {
+    @apply overflow-x-hidden
+  }
+
   body {
     @apply font-inter bg-dark text-white
   }
